--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,9 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.3",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
+    "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "uuid": "^9.0.0"
   }
